# AquaPilot

./: CMakeLists.txt  README.md  sdkconfig.defaults
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  idf_component.yml
main/ble/: ble_central_manager.c  ble_central_manager.h
main/connections/: connection_status.c  connection_status.h
main/display/: display_control.c  display_control.h
main/feeder/: feeder_callback_server.c  feeder_callback_server.h  feeder_client.c  feeder_client.h
main/heater/: chihiros_ble.c  chihiros_ble.h  heater_console.c  heater_console.h  heater_service.c  heater_service.h
main/light/: fluval_ble.c  fluval_ble.h  light_console.c  light_console.h  light_service.c  light_service.h
main/net/: lan_http.c  lan_http.h  shelly_client.c  shelly_client.h  wifi_manager.c  wifi_manager.h
main/safety/: co2_power_monitor.c  co2_power_monitor.h  equipment_restore.c  equipment_restore.h  filter_calibration.c  filter_calibration.h  filter_power_monitor.c  filter_power_monitor.h  heater_override.c  heater_override.h  maintenance_mode.c  maintenance_mode.h
main/schedule/: aquapilot_time.c  aquapilot_time.h  co2_automation.c  co2_automation.h  co2_schedule.c  co2_schedule.h  feeder_amount.c  feeder_amount.h  feeder_service.c  feeder_service.h  feeder_slots.c  feeder_slots.h
main/sensors/: sht3x_sensor.c  sht3x_sensor.h  temp_source.c  temp_source.h
main/storage/: aquapilot_nvs.c  aquapilot_nvs.h  aquapilot_settings.c  aquapilot_settings.h  sd_storage.c  sd_storage.h  temp_history.c  temp_history.h  temp_range_config.c  temp_range_config.h  wifi_creds_nvs.c  wifi_creds_nvs.h
main/ui/: aquapilot_ui.c  aquapilot_ui.h  screen_main.c  screen_main.h  screen_settings.c  screen_settings.h  screen_wifi.c  screen_wifi.h  tile_ambient.c  tile_ambient.h  tile_clock.c  tile_clock.h  tile_co2_schedule.c  tile_co2_schedule.h  tile_co2_status.c  tile_co2_status.h  tile_common.c  tile_common.h  tile_connections.c  tile_connections.h  tile_feeder_status.c  tile_feeder_status.h  tile_filter_status.c  tile_filter_status.h  tile_filter_watts.c  tile_filter_watts.h  tile_heater_power.c  (+13 more)
(+6 files in other folders)
