idf_component_register(
    SRCS
        "app_main.c"
        "ui/aquapilot_ui.c"
        "ui/screen_main.c"
        "ui/screen_wifi.c"
        "ui/screen_settings.c"
        "ui/timezone_options.c"
        "ui/ui_nav.c"
        "ui/tile_common.c"
        "ui/tile_temp.c"
        "ui/tile_heater_power.c"
        "ui/tile_co2_status.c"
        "ui/tile_filter_status.c"
        "ui/tile_filter_watts.c"
        "ui/tile_co2_schedule.c"
        "ui/tile_settings.c"
        "ui/tile_connections.c"
        "ui/tile_ambient.c"
        "ui/tile_light_status.c"
        "schedule/co2_schedule.c"
        "schedule/co2_automation.c"
        "schedule/feeder_service.c"
        "schedule/aquapilot_time.c"
        "sensors/temp_source.c"
        "sensors/sht3x_sensor.c"
        "connections/connection_status.c"
        "net/wifi_manager.c"
        "net/shelly_client.c"
        "safety/heater_override.c"
        "safety/co2_power_monitor.c"
        "feeder/feeder_client.c"
        "display/display_control.c"
        "safety/filter_power_monitor.c"
        "safety/filter_calibration.c"
        "safety/maintenance_mode.c"
        "storage/wifi_creds_nvs.c"
        "storage/aquapilot_nvs.c"
        "storage/aquapilot_settings.c"
        "storage/temp_range_config.c"
        "ble/ble_central_manager.c"
        "heater/chihiros_ble.c"
        "heater/heater_console.c"
        "heater/heater_service.c"
        "light/fluval_ble.c"
        "light/light_console.c"
        "light/light_service.c"
    INCLUDE_DIRS
        "."
        "ui"
        "sensors"
        "schedule"
        "connections"
        "net"
        "safety"
        "storage"
        "ble"
        "heater"
        "light"
        "feeder"
        "display"
    REQUIRES
        waveshare__esp32_p4_wifi6_touch_lcd_7b
        nvs_flash
        esp_wifi
        esp_netif
        esp_event
        esp_timer
        esp_http_client
        console
        bt
        chihiros_heater_protocol
        fluval_light_protocol
        driver
)
